--- a/css/final.css
+++ b/css/final.css
@@ -103,7 +103,6 @@ header {
 }
 
 .campo input {
-    /* border-radius: 10px; */
     border: solid 1px var(--cinza);
 }
 
@@ -174,77 +173,6 @@ header {
 .fotos img {
     width: 80px;
 }
-
-/*Responsivo Cadastro de Produto Doação e Venda*/
-
-/* @media (max-width: 1169px) {
-    body {
-        width: 500px;
-    }
-
-    main {
-        width: 1000px;
-    }
-
-    .card_cadastroproduto h2 {
-        font-size: 20px;
-    }
-
-    form {
-        width: 300px;
-        height: 1200px;
-    }
-
-    .campo_cadastroproduto {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .radios_cadastroproduto {
-        display: flex;
-        flex-direction: column;
-        width: 100px;
-        align-items: flex-start;
-    }
-
-    .fotos_cadastroproduto input {
-        width: 100px;
-        display: flex;
-        justify-content: flex-start;
-    }
-
-    .btn_cadastroproduto {
-        width: 300px;
-        margin: auto;
-    }
-}
-
-@media (max-width: 767px) {
-    main {
-        width: 730px;
-        margin: auto;
-    }
-
-    .fotos_cadastroproduto input {
-        width: 250px;
-    }
-
-    footer {
-        background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-        color: white;
-        font-size: 18px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        text-align: center;
-        height: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .card_cadastroproduto {
-        height: 1300px;
-    }
-} */
 
 /* Cadastro de vendedor */
 
@@ -749,6 +677,7 @@ header {
     border-radius: 5px;
     width: 1200px;
     background-color: white;
+    z-index: initial;
 }
 
 .home_pag .cnjt {
@@ -785,13 +714,15 @@ header {
 }
 
 .home_pag .menu a:hover {
-    color: black;
+    color: blue;
     transition: 0.3s;
 }
 
 .home_pag .menu-centro {
     display: flex;
     justify-content: center;
+    z-index: 4;
+    /* position: absolute; */
 }
 
 .home_pag .ca {
@@ -975,7 +906,6 @@ header {
     border-radius: 7px;
     width: 250px;
     height: auto;
-    /* transition: all 2s; */
 }
 
 .home_pag .pdts2 {
@@ -2185,17 +2115,21 @@ main {
     background-position: center;
     background-repeat: no-repeat;
     width: 50%;
-    height: 100vh;
+    height: 84vh;
 }
 
-.login_pag .contCard_1_cadlog {
-    width: 50%;
+.contCard_1_cadlog {
+    /* caixa  */
+    width: 600px;
+    margin: 0px auto;
+    align-items: center;
+    border-radius: 4px;
 }
 
 .login_pag .card_1_cadlog {
     width: 80%;
-    height: 80%;
-    margin: 12% auto;
+    height: 90%;
+    margin: 30px auto;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 4px 4px 15px #cccccc;
@@ -2203,29 +2137,43 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
 }
 
-.login_pag .card_1_cadlog #loginForm {
+.login_pag .card_1_cadlog .loginForm {
     width: 50%;
     height: 60%;
 }
 
-.login_pag .card_1_cadlog #loginForm input {
-    width: 100%;
-    height: 37px;
-    border-radius: 5px;
-    border: solid 1px #cccccc;
+.login_pag .card_1_cadlog .loginForm input {
+    /* width: 50%; */
+    /* height: 50%; */
+    /* border-radius: 5px; */
+    border: solid 1px var(--cinza);
+    margin: 10px;
+    width: 355px;
 }
 
-.login_pag .card_1_cadlog #loginForm label {
+/* .login_pag .card_1_cadlog #loginForm label {
     width: 100%;
     margin-bottom: 3%;
+} */
+
+.login_cadlog input{
+    width: 350px;
+    padding: 10px;
 }
 
 .login_pag .card_1_cadlog .login_cadlog {
     display: flex;
     flex-direction: column;
-    margin: 5% 0;
+    align-items: center;
+    /* margin: 5% 0; */
+    width: 355px;
+    padding: 10px;
+
 }
 
 .login_pag .card_1_cadlog button {
@@ -2236,12 +2184,25 @@ main {
     border: solid 1px var(--roxo);
     color: white;
     width: 100%;
-    margin-top: 15%;
+    /* margin-top: 15%; */
     margin-bottom: 10%;
 }
 
 .login_pag .card_1_cadlog .btn_cadastrarse {
     text-align: center;
+}
+
+.btn_cadastrarse{
+    text-transform: uppercase;
+}
+
+.btn_cadastrarse a:hover{
+    font-weight: bold;
+}
+
+.btn_cadlog button:hover{
+    background-color: white;
+    color: var(--roxo);
 }
 
 .login_pag .card_1_cadlog .btn_cadastrarse a {
