--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -397,7 +397,7 @@ header {
 /* Cadastro e login */
 
 .cadastroelogin_pag {
-    background-image: url(img/bannerpho.png);
+    background-image: url(../img/bannerpho.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -1511,7 +1511,7 @@ main {
 
 .html-card-cursos-home {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.01);
-    padding: ;
+    /* padding: ; */
     border-radius: 5px 5px 0px 0px;
     /* border: solid 1px black; */
     background-image: linear-gradient(-225deg, rgba(30, 30, 30, 0.6) 30%, rgba(46, 46, 46, 0.5) 80%), url("http://unsplash.it/350/200/?=fruit");
@@ -1620,7 +1620,7 @@ main {
 
 .direito a {
     text-decoration: none;
-    color:
+    /* color: */
 }
 
 .perfil_padding_produtos2 {
@@ -1689,7 +1689,7 @@ main {
     justify-content: center;
 }
 
-.perfil_placar_rank h4 {}
+/* .perfil_placar_rank h4 {} */
 
 .perfil_rank {
     text-align: center;
