--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -174,90 +174,109 @@ header {
     width: 80px;
 }
 
-/* Cadastro de vendedor */
+/* Cadastro de Usuario */
 
-.btn_cadastrovendedor {
-    padding-top: 20px;
-    width: 130px;
-    margin: auto;
+/*Conteúdo*/
+
+.cadastro_cadlog {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 40px;
 }
 
-.cardscadastrovendedor h3 {
-    padding-top: 20px;
-    color: var(--roxo);
-    text-transform: uppercase;
-    padding-bottom: 5px;
-    text-align: center;
-}
-
-.cardscadastrovendedor input {
-    color: #707070;
-    border-radius: 4px;
-    border: solid 1px var(--cinza);
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    margin: 5px 0px;
-    padding: 4px;
-    justify-content: center;
-}
-
-.cardscadastrovendedor {
+.cards_cadlog {
     width: 550px;
     margin: auto;
     display: flex;
     justify-content: space-around;
+}
+
+.campo_cadastrousuario {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.descricao {
+    font-size: 15px;
+    padding: 10px;
+    width: 390px;
+    text-align: center;
+    margin: auto;
+}
+
+.campo_cadastrousuario input {
+    border: solid 1px var(--cinza);
+    padding: 10px;
+    width: 355px;
+}
+
+.card_cadastro {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    /* border: solid 1px #707070; */
+    border-radius: 4px;
+    /* padding: 0px 30px; */
+    padding-bottom: 30px;
+    justify-content: center;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+    box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
+}
+
+.card_cadastro h2 {
+    font-size: 35px;
+    padding: 20px;
+    color: var(--roxo);
+    text-transform: uppercase;
+}
+
+.cadastrousuario {
+    background-image: url(../img/bannerpho.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+    justify-content: center;
     padding: 40px 0px;
 }
 
-.cardscadastrovendedor .informacao_cadastrovendedor {
-    display: flex;
-    flex-direction: column;
-    border: solid 1px #707070;
-    border-radius: 8px;
-    padding: 0px 30px;
-    height: 200px;
-    justify-content: flex-start;
-    width: 190px;
-    background-color: white;
+.card_cadastro h2 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
 
-.cardscadastrovendedor .cadvend_cadastrovendedor {
-    display: flex;
-    flex-direction: column;
-    width: 190px;
-    border: solid 1px #707070;
-    border-radius: 8px;
-    padding: 0px 30px;
-    padding-bottom: 50px;
-    background-color: white;
-}
-
-.cardscadastrovendedor .cadastro2 {
-    display: flex;
-    flex-direction: column;
+.login_cadlog,
+.cadastro_cadlog {
     padding: 9px;
 }
 
-.cardscadastrovendedor .cadvend form input {
-    width: 160px;
+.login_cadlog input,
+.cadastro_cadlog input {
     padding: 5px;
 }
 
-.cardscadastrovendedor button {
+.btn_cadlog {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding: 10px;
+}
+
+.btn_cadlog button {
     padding: 10px 20px;
     background-color: var(--roxo);
     border-radius: 4px;
     border: solid 1px var(--roxo);
     color: white;
+    width: 380px;
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
-.cardscadastrovendedor .btn {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    padding-bottom: 10px;
-}
 
 /* Responsivo ranking */
 
