Pagina Ranking concluida

--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -306,6 +306,20 @@ header {
         margin: auto;
         padding-top: 20px;
     }
+    table tbody tr{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    table tbody tr{
+        display: flex;
+        flex-direction: column;
+    }
+    #ranking_pontos_table{
+        display: none;
+    }
+    #pontuacao{
+        padding-bottom: 13px;
+    }
 }
 
 /* celular ranking */
@@ -326,8 +340,13 @@ header {
     }
     .ranking_pag .ranking {
         margin-top: 60px;
-        width: 40%;
+        width: 40vw;
+        line-height: 2.1em;
     }
+    .ranking_pag .descricao p {
+        width: 170px;
+    }
+
     .ranking_pag .descricao {
         margin-top: 60px;
     }
@@ -335,6 +354,16 @@ header {
         padding: 0px 5px;
         margin: auto;
         text-align: center;
+    }
+    table tbody tr{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #ranking_pontos_table{
+        display: none;
+    }
+    #pontuacao{
+        padding-bottom: 13px;
     }
 }
 
@@ -1338,7 +1367,7 @@ main {
 /* pagina Ranking */
 
 .ranking_pag td {
-    padding: 0px 45px;
+    padding: 0px 55px;
     margin: auto;
     text-align: center;
 }
@@ -1356,20 +1385,21 @@ main {
     padding-top: 40px;
 }
 
-.ranking_pag .descricao {
-    width: 45%;
+.ranking_pag .div .descricao {
+    width: 40%;
     text-align: justify;
     border: solid 0px var(--roxo);
     border-radius: 5px;
-    height: 800px;
     background-color: white;
+    padding-bottom: 45px;
     -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
     -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
     box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
 }
 
 .ranking_pag .ranking {
-    width: 45%;
+    width: 40%;
+    padding-bottom: 3%;
     border: solid 0px var(--roxo);
     border-radius: 5px;
     background-color: white;
@@ -1390,7 +1420,7 @@ main {
     border-bottom: solid 2px var(--roxo);
     color: var(--roxo);
     text-transform: uppercase;
-    font-family: 'Segoe Ui';
+    font-family: 'Luckiest' , cursive;
     font-size: 30px;
 }
 
@@ -1411,6 +1441,7 @@ main {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    margin-top: 20px;
 }
 
 .ranking_pag .a-botao:hover {
@@ -1424,6 +1455,36 @@ main {
     display: flex;
     justify-content: flex-end;
 }
+
+.ranking_pag .ranking table tbody tr td{
+    font-family: 'Luckiest' , cursive;
+}
+
+#pontuacao{
+    color: var(--roxo);
+    font-size: 20px;
+}
+
+/* .ranking_pag .descricao {
+    width: 80%;
+    height: auto;
+    padding-bottom: 7%;
+}
+
+.ranking_pag p {
+    width: 80%;
+}
+
+.ranking_pag .ranking {
+    width: 80%;
+    height: auto;
+    padding-bottom: 7%;
+}
+
+.ranking_pag .botao {
+    justify-content: center;
+} */
+
 
 /* pagina perfil */
 
@@ -2364,25 +2425,6 @@ main {
 
 /* pagina ranking */
 
-.ranking_pag .descricao {
-    width: 80%;
-    height: auto;
-    padding-bottom: 7%;
-}
-
-.ranking_pag p {
-    width: 80%;
-}
-
-.ranking_pag .ranking {
-    width: 80%;
-    height: auto;
-    padding-bottom: 7%;
-}
-
-.ranking_pag .botao {
-    justify-content: center;
-}
 
 /* celular */
 
