--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -2202,34 +2202,35 @@ main .paginaProduto_pag {
 /* pagina login */
 
 .login_pag .cards_cadlog {
-    display: flex;
-    justify-content: space-between;
-}
-
-.login_pag .cards_cadlog .imgLoginCad {
+    /* display: flex;
+    justify-content: space-between; */
     background-image: linear-gradient(rgba(183, 39, 255, 0.5), rgba(183, 39, 255, 0.5)), url(../img/img4.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 50%;
-    height: 84vh;
+    width: 100%;
+    height: 750px;
+
+}
+
+.login_pag .cards_cadlog .imgLoginCad {
+
 }
 
 .contCard_1_cadlog {
     /* caixa  */
-    width: 600px;
+    width: 700px;
     margin: 0px auto;
     align-items: center;
     border-radius: 4px;
 }
 
 .login_pag .card_1_cadlog {
-    width: 80%;
+    width: 90%;
     height: 90%;
     margin: 30px auto;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 4px 4px 15px #cccccc;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2259,7 +2260,8 @@ main .paginaProduto_pag {
 } */
 
 .login_cadlog input{
-    width: 350px;
+    border: none;
+    width: 300px;
     padding: 10px;
 }
 
@@ -2280,9 +2282,9 @@ main .paginaProduto_pag {
     border-radius: 4px;
     border: solid 1px var(--roxo);
     color: white;
-    width: 100%;
+    width: 80%;
     /* margin-top: 15%; */
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 .login_pag .card_1_cadlog .btn_cadastrarse {
@@ -2621,5 +2623,20 @@ main .paginaProduto_pag {
     }
     .ongs_pag .containerOngs {
         margin: 8% auto;
+    }
+}
+
+/* Responsivo Tablet Login */
+@media (max-width: 1169px){
+    .login_pag .card_1_cadlog{
+        width: 60vw;
+    }
+}
+@media (max-width: 768px){
+    .login_pag .card_1_cadlog{
+        width: 75vw;
+    }
+    .login_pag .card_1_cadlog{
+        
     }
 }
