--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -966,8 +966,9 @@ header {
     border-radius: 50px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    line-height: 2.0em;
+    align-items: flex-start;
+    line-height: 3.0em;
+    font-size: 20px;
 }
 
 .home_pag .branco img {
@@ -1146,12 +1147,27 @@ header {
 #produtos_titulo{
     margin-left: 1.2%;
 }
-.agora_vai{
+.produtos_home{
     width: 1340px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+.Usuarios{
+    display: flex;
+    align-items: center;
+    text-align: right;
+}
+#imagem_ranking_home{
+    padding-right: 20px;
+}
+.primeiros_home{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    flex-direction: column;
+}
+
 
 /* Página Ongs */
 .containerOngs{
