--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -371,9 +371,8 @@ header {
     transition: 0.3s;
     display: block;
 }
-.informacoes_card_oferta{
-    display: block;
-    width: 100%;
+.informacoes_card_oferta:hover{
+    display: block;    
 }
 .informacoes_card_oferta{
     display: none;
@@ -382,6 +381,7 @@ header {
     margin-bottom: -70px;
     background-color: rgba(162, 0, 203, 0.6);
     color: white;
+    width: 100%;
 }
 .informacoes_card_oferta p{
     margin-left: 5%;
@@ -2155,7 +2155,7 @@ main .paginaProduto_pag {
     .divSelects {
         width: 50%;
         display: flex;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         align-items: center;
     }
     .btnAplicarFiltros {
@@ -2229,6 +2229,10 @@ main .paginaProduto_pag {
 .categorias {
     width: 95%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 40px;
 }
 
 .categoria h2 {
