bug card, pagina produto

--- a/smart_sale/src/assets/css/final.css
+++ b/smart_sale/src/assets/css/final.css
@@ -1479,6 +1479,7 @@ main .paginaProduto_pag {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding-bottom: 5%;
 }
 
 .paginaProduto_pag .cardProduto {
